# flow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
flow/: CMakeLists.txt
flow/flow/: Chain.h  Cofold.h  Cycle.h  Deref.h  Dereference.h  Elements.h  ElementsReferenced.h  Enumerate.h  Filter.h  Flatten.h  Flow.h  Fold.h  Fuse.h  Generate.h  Inspect.h  Iterator.h  Map.h  Maybe.h  Merge.h  RefElements.h  Reference.h  SequenceIterator.h  Stride.h  Successors.h  Take.h  Then.h  TypeTraits.h  Unfold.h  Zip.h  details.h
flow/include/flow/: Flow.h  Iterator.h
flow/include/flow/convergent/: Merge.h
flow/include/flow/core/: Log.h  TypeTraits.h
flow/include/flow/divergent/: Cofold.h  Elements.h  RefElements.h
flow/include/flow/functional/: Deref.h  Enumerate.h  Flatten.h  Fuse.h  Map.h  Stride.h  Take.h
sequences/: CMakeLists.txt
sequences/include/sequences/: Flow.h  Iterator.h  Mutation.h  Sequence.h  chain.h  discrete_range.h  filter.h  flatten.h  inspect.h  map.h  map2.h  mutation.h  sequence.h  tools.h  zip.h
sequences/include/sequences/combinators/: AsPointer.h  AsPtr.h  ByPtr.h  Chain.h  Filter.h  Flatten.h  Index.h  Inspect.h  InspectPair.h  Map.h  Map2.h  MapPair.h  Move.h  OnEach.h  OnEachPair.h  Range.h  StepBy.h  Stride.h  Take.h  Zip.h  chain.h  discrete_range.h  filter.h  flatten.h  inspect.h  map.h  map2.h  zip.h
sequences/include/sequences/convergent/: Chain.h  Fold.h  Merge.h
sequences/include/sequences/core/: ISequence.h  TypeTraits.h
sequences/include/sequences/divergent/: Cofold.h  Elements.h  MoveElements.h  RefElements.h  Successors.h
sequences/include/sequences/functional/: Deref.h  Enumerate.h  Filter.h  Flatten.h  Fuse.h  Inspect.h  Map.h  Stride.h  Take.h
sequences/include/sequences/sequences/: Chain.h  Cofold.h  Deref.h  Elements.h  Enumerate.h  Filter.h  Flatten.h  Fold.h  Fuse.h  Inspect.h  Map.h  Merge.h  MoveElements.h  Sequence.h  Stride.h  Successors.h  Take.h  TypeTraits.h
tests/: CMakeLists.txt  SequenceTests.cpp  TestsAuxiliary.h  combinators.cpp  common.cpp  common.h  containers.cpp  main.cpp  mutation.cpp  next-gen.cpp  terminators.cpp  tests.cpp  tools.cpp  tools.h  utilities.cpp
